--- a/styles/navigation.module.css
+++ b/styles/navigation.module.css
@@ -1,28 +1,29 @@
 .nav {
   background-color: #2d2d2d;
   position: fixed;
-  width: 30%;
-  margin: 0 auto;
-  top: 20px;
-  border-radius: 50px;
-  padding: 20px 0px;
-  left: 50%;
+  top: 24px;
+  left: 3%;
   z-index: 10;
-  transform: translateX(-50%);
+  border-radius: 100%;
 }
-
+.nav a {
+  display: block;
+  padding: 24px;
+}
 .nav ul {
   display: flex;
   justify-content: center;
-  gap: 50px;
 }
-
 .nav ul li {
   list-style: none;
   transform: none;
-  transition: all 0.1s ease-in-out;
+  opacity: 0.7;
+  transition: all 0.2s ease-in-out;
 }
-
-.nav ul li:hover {
+.nav ul li svg {
+  font-size: 24px;
+}
+.nav:hover ul li {
   transform: scale(1.05);
+  opacity: 1;
 }
