--- a/styles/global.css
+++ b/styles/global.css
@@ -126,7 +126,7 @@ table {
 /* ------ RESET CSS END ----- */
 
 body {
-  padding-top: 150px;
+  /* padding-top: 150px; */
   font-family: 
     system-ui, 
     -apple-system, 
