--- a/styles/movie-videos.module.css
+++ b/styles/movie-videos.module.css
@@ -1,17 +1,17 @@
 .container {
-  width: 80%;
-  margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-area: d;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
-  margin-top: 100px;
   padding-bottom: 100px;
 }
 
 .container iframe {
+  width: 100%;
   border-radius: 10px;
   opacity: 0.8;
   transition: opacity 0.2s ease-in-out;
+  margin: 0 auto;
 }
 
 .container iframe:hover {
