--- a/styles/detail-page/movie-page.module.scss
+++ b/styles/detail-page/movie-page.module.scss
@@ -1,36 +1,37 @@
 .container {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 1fr);
-  grid-template-rows: auto;
-  grid-template-areas: "top top top top"
-                       "bottom bottom bottom bottom";
   gap: 50px;
 
   // 헤더 콘텐츠
   .header__container {
     width: 100%;
-    height: 100%;
+    height: 560px;
     grid-area: top;
+    position: relative;
     z-index: 1;
     
-    position: relative;
     article {
       width: 80%;
-      margin: 0 auto;
       display: grid;
       grid-template-rows: auto;
-      grid-template-areas: "poster info info info";
-      position: relative;
+      grid-template-areas: "poster info info info info info info info";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
       z-index: 4;
     }
 
+    // 백그라운드 이미지
     .bg__img {
-      position: absolute;
-      width: 100%;
+      width: 80%;
       height: 100%;
-      z-index: 1;
       opacity: .8;
+      position: absolute;
+      left: 50%;
+      top: 0;
+      transform: translateX(-50%);
+      z-index: 1;
       &::after {
         content: "";
         display: block;
@@ -40,17 +41,18 @@
         width: 100%;
         height: 100%;
         z-index: 2;
-        background-color: rgba(15, 15, 15, .5);
+        background-color: rgba(15, 15, 15, .75);
       }
     }
     .bg__mask {
+      width: 100%;
+      height: 100%;
       position: absolute;
       top: 0;
       left: 0;
-      display: none;
-      z-index: 3;
+      z-index: 4;
+      background: linear-gradient(to right,#000 30%,rgba(15,15,15,0) 70%,#000 90%),
+                  linear-gradient(to top,#000 5%,rgba(15,15,15,0) 15%, transparent 100%);
     }
-
-
   }  
 }
