--- a/styles/detail-page/movie-poster.module.scss
+++ b/styles/detail-page/movie-poster.module.scss
@@ -1,5 +1,5 @@
 .poster {
-  max-width: 300px;
+  // max-width: 400px;
   width: 100%;
   grid-area: poster;
   border-radius: 20px;
@@ -10,4 +10,3 @@
   width: 100%;
   border-radius: 5%;
 }
-
