--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -3,7 +3,7 @@
 .credits__container,
 .videos__container,
 .similar__container {
-  width: 80%;
+  width: 70%;
   grid-area: bottom;
   margin: 0 auto;
 }
@@ -12,6 +12,57 @@
 // synopsys
 .synopsys__container {
   overflow: hidden;
+
+  
+  section {
+    // h2 전체스타일
+    margin: 0 0 50px;
+    h2 {
+      margin: 0 0 20px;
+    }
+  }
+  .about {
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 32px;
+    }
+    p {
+      width: 50%;
+    }
+  }
+  .credits {
+    ul {
+      display: flex;
+      justify-content: flex-start;
+    }
+  }
+  .videos {
+    article {
+      display: flex;
+      justify-content: flex-start;
+      gap: 16px;
+      iframe {
+        // width: 100%;
+        border-radius: 10px;
+        opacity: 0.8;
+        transition: opacity 0.2s ease-in-out;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+  }
+  .similar {
+    ul {
+      display: flex;
+      justify-content: flex-start;
+      gap: 16px;
+      img {
+        max-width: 200px;
+        width: 100%;
+      }
+    }
+  }
 }
 
 // credits
@@ -21,7 +72,6 @@
   grid-template-columns: repeat(auto-fill, minmax(20%, auto));
   justify-content: space-between;
   box-sizing: border-box;
-
   .card {
     padding: 24px;
     margin: 8px;
@@ -31,6 +81,9 @@
     img {
       width: 100%;
       height: 100%;
+    }
+    .name {
+      font-size: 16px;
     }
   }
 }
