--- a/styles/detail-page/movie-info.module.scss
+++ b/styles/detail-page/movie-info.module.scss
@@ -1,7 +1,36 @@
 .info {
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-  gap: 20px;
+  position: relative;
+  top: 0;
+  left: 0;
   grid-area: info;
+  margin: 36px 36px 0 36px;
+  .top_group {
+    position: absolute;
+    top: 0;
+    left: 0;
+    h1 {
+      font-size: 4rem;
+      font-weight: bold;
+    }
+    ul {
+      margin-top: 24px;
+      display: flex;
+      gap: 1rem;
+      li {
+        font-size: 0.9rem;
+        padding: 6px 12px;
+        border: 1px solid #fff;
+        border-radius: 50px;
+      }
+    }
+  }
+  .bottom_group {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 16px;
+  }
 }
