--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -7,60 +7,92 @@
   grid-area: bottom;
   margin: 0 auto;
 }
-
 // synopsys
 .synopsys__container {
-  overflow: hidden;
-
   > article {
-    // h2 전체스타일
-    margin: 0 0 50px;
+    width: 100%;
+    height: 100%;
+    border-bottom: 1px solid rgba(31, 31, 31, 0.7);
+    padding: 75px 0;
     h2 {
-      margin: 0 0 20px;
+      font-weight: bold;
+      font-size: 1.5rem;
+      margin: 0 0 36px;
+    }
+    ul {
+      width: 100%;
+      gap: 16px;
+      display: flex;
+    }
+    a {
+      float: right;
+      margin: 16px 0 0;
     }
   }
+  // -------------------------------------------
+  // 소개
   .about {
-    > h2 {
+    h2 {
       font-size: 2rem;
-      margin-bottom: 32px;
+      margin: 0 0 32px 0;
     }
-    > p {
+    p {
       width: 50%;
+      line-height: 1.5rem;
     }
   }
+  // 출연진
   .credits {
     ul {
-      display: flex;
-      justify-content: flex-start;
-    }
-  }
-  .videos {
-    > article {
-      display: flex;
-      justify-content: flex-start;
-      gap: 16px;
-      iframe {
-        // width: 100%;
-        border-radius: 10px;
-        opacity: 0.8;
-        transition: opacity 0.2s ease-in-out;
-        &:hover {
-          opacity: 1;
+      li {
+        width: 20%;
+        text-align: center;
+        img {
+          width: 100%;
+          border-radius: 3%;
+          margin-bottom: 8px;
+        }
+        p {
+          font-size: 18px;
+          margin-bottom: 8px;
+        }
+        span {
+          font-size: 16px;
+          color: #ccc;
         }
       }
     }
   }
-  .similar {
-    > ul {
-      display: flex;
-      justify-content: flex-start;
-      gap: 16px;
-      img {
-        max-width: 200px;
-        width: 100%;
+  // 비디오
+  .videos {
+    ul {
+      li {
+        width: 33%;
+        iframe {
+          width: 100%;
+          border-radius: 10px;
+          opacity: 0.8;
+          transition: opacity 0.2s ease-in-out;
+          &:hover {
+            opacity: 1;
+          }
+        }
       }
     }
   }
+  // 관련 영화
+  .similar {
+    ul {
+      li {
+        width: 20%;
+        img {
+          width: 100%;
+          border-radius: 10%;
+        }
+      }
+    }
+  }
+  // -------------------------------------------
 }
 
 // credits
