--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -7,7 +7,8 @@
   grid-area: bottom;
   margin: 0 auto;
 }
-// synopsys
+// ==== {Children} ====
+// Synopsys Page (main)
 .synopsys__container {
   > article {
     width: 100%;
