--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -7,6 +7,16 @@
   grid-area: bottom;
   margin: 0 auto;
 }
+.credits__container,
+.videos__container,
+.similar__container {
+  h2 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin: 0 0 50px;
+    
+  }
+}
 // ==== {Children} ====
 // Synopsys Page (main)
 .synopsys__container {
@@ -69,13 +79,14 @@
           margin-bottom: 8px;
           padding: 0 24px 16px;
         }
-        p {
+        .credit_name {
           font-size: 18px;
-          margin-bottom: 8px;
+          font-weight: bold;
+          margin-bottom: 12px;
         }
-        span {
+        .credit_character {
           font-size: 16px;
-          color: #ccc;
+          color: #888;
         }
       }
     }
@@ -100,11 +111,19 @@
   // 관련 영화
   .similar {
     ul {
+      display: flex;
+      justify-content: space-between;
       li {
-        width: 20%;
+        width: 18%;
         img {
           width: 100%;
           border-radius: 10%;
+          margin: 0 0 6px;
+        }
+        // similar title
+        p {
+          font-size: 0.875rem;
+          color: #aaa;
         }
       }
     }
@@ -114,46 +133,108 @@
 
 // credits
 .credits__container {
-  overflow: hidden;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20%, auto));
-  justify-content: space-between;
-  box-sizing: border-box;
-  .card {
-    padding: 24px;
-    margin: 8px;
-    background-color: #2d2d2d;
-    border-radius: 15px;
-
-    img {
-      width: 100%;
-      height: 100%;
-    }
-    .name {
-      font-size: 16px;
+  h2 {
+    
+  }
+  ul {
+    text-align: left;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, auto));
+    grid-template-rows: 1fr auto;
+    gap: 20px;
+    li {
+      display: flex;
+      figure {
+        width: 30%;
+        img {
+          width: 100%;
+          height: auto;
+        }
+      }
+      article {
+        width: 60%;
+        padding: 16px 0 0 36px;
+        .name {
+          font-size: 1.25rem;
+          line-height: 2.5rem;
+          font-weight: bold;
+        }
+        .character {
+          color: #ccc;
+          font-size: 1rem;
+          font-weight: normal;
+        }
+      }
     }
   }
 }
 
 // video
 .videos__container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
-  padding-bottom: 100px;
-
-  iframe {
-    width: 100%;
-    border-radius: 10px;
-    opacity: 0.8;
-    transition: opacity 0.2s ease-in-out;
-    margin: 0 auto;
-    &:hover {
-      opacity: 1;
+  ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 50px;
+    li {
+      iframe {
+        width: 100%;
+        max-width: 400px;
+        border-radius: 10px;
+        opacity: 0.8;
+        transition: opacity 0.2s ease-in-out;
+        margin: 0 auto;
+        &:hover {
+          opacity: 1;
+        }
+      }
+      p {
+        color: #aaa;
+      }
     }
   }
+
 }
 
 // similar
 .similar__container {
+  > ul {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 50px;
+    li {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-wrap: wrap;
+      img {
+        width: 20%;
+      }
+      article {
+        width: 70%;
+        height: 100%;
+        padding: 0 0 0 16px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        // position: relative;
+        .title {
+          font-size: 1.125rem;
+          line-height: 1.75rem;
+        }
+        .genres {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 8px;
+          p {
+            color: #aaa;
+            font-size: 0.875rem;
+          }
+        }
+        a {
+          font-size: 0.875rem;
+          align-self: flex-end;
+        }
+      }
+    }
+  }
 }
