--- a/styles/navigation.module.scss
+++ b/styles/navigation.module.scss
@@ -1,14 +1,24 @@
 .nav {
-  position: fixed;
-  top: 24px;
-  left: 3%;
+  position: relative;
+  top: 36px;
+  left: 5%;
   z-index: 10;
   // opacity: .8;
   a {
+    position: absolute;
+    top: 0;
+    left: 0;
     display: block;
     padding: 16px;
+    opacity: .7;
+    transform: scale(1);
+    transition: all .2s ease-in-out;
     svg {
-      font-size: 36px;
+      font-size: 24px;
+    }
+    &:hover {
+      opacity: 1;
+      transform: scale(1.1);
     }
   }
 }
