Fix navigation position: reletive

--- a/styles/navigation.module.scss
+++ b/styles/navigation.module.scss
@@ -1,9 +1,10 @@
 .nav {
+  width: 100%;
   position: relative;
   top: 36px;
   left: 5%;
   z-index: 10;
-  // opacity: .8;
+  opacity: .8;
   a {
     position: absolute;
     top: 0;
