--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -11,10 +11,11 @@
 .videos__container,
 .similar__container {
   h2 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: bold;
-    margin: 0 0 50px;
-    
+    margin: 0 0 100px;
+    padding: 0 0 0 1rem;
+    border-left: 5px solid #666;
   }
 }
 // ==== {Children} ====
