Fix poster, info (main Link)

--- a/styles/detail-page/movie-poster.module.scss
+++ b/styles/detail-page/movie-poster.module.scss
@@ -3,6 +3,10 @@
   width: 100%;
   grid-area: poster;
   border-radius: 20px;
+  transition: opacity .1s ease-in-out;
+  &:hover {
+    opacity: .9;
+  }
 }
 
 .poster img {
