--- a/styles/detail-page/movie-info.module.scss
+++ b/styles/detail-page/movie-info.module.scss
@@ -8,9 +8,16 @@
     position: absolute;
     top: 0;
     left: 0;
-    h1 {
-      font-size: 4vw;
-      font-weight: bold;
+    a {
+      text-decoration: none;
+      transition: opacity .1s ease-in-out;
+      h1 {
+        font-size: 4vw;
+        font-weight: bold;
+      }
+      &:hover {
+        opacity: .8;
+      }
     }
     ul {
       margin-top: 24px;
