--- a/styles/detail-page/movie-info.module.scss
+++ b/styles/detail-page/movie-info.module.scss
@@ -3,16 +3,20 @@
   top: 0;
   left: 0;
   grid-area: info;
-  margin: 36px 36px 0 36px;
+  margin: 0 0 0 36px;
   .top_group {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 250px;
+    white-space: pre-wrap;
+    text-overflow: ellipsis;
     a {
       text-decoration: none;
       transition: opacity .1s ease-in-out;
       h1 {
-        font-size: 4vw;
+        font-size: 3.625vw;
         font-weight: bold;
       }
       &:hover {
