--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -138,7 +138,7 @@
           img {
             width: 100%;
             height: 100%;
-            border-radius: 10%;
+            border-radius: 3px;
             margin: 0 0 6px;
           }
           // similar title
@@ -246,6 +246,7 @@
         img {
           transition: opacity .2s ease-in-out;
           width: 100%;
+          height: 100%;
         }
         &:hover {
           img {
