--- a/styles/detail-page/movie-poster.module.scss
+++ b/styles/detail-page/movie-poster.module.scss
@@ -7,12 +7,12 @@
   &:hover {
     opacity: .9;
   }
-}
-
-.poster img {
-  width: 100%;
-  min-width: 250px;
-  max-width: 400px;
-  border-radius: 7%;
-  filter: drop-shadow(2px -1px 4rem rgba(255, 255, 255, .1));
+  img {
+    width: 100%;
+    height: 100%;
+    min-width: 250px;
+    max-width: 400px;
+    border-radius: 7%;
+    filter: drop-shadow(2px -1px 4rem rgba(255, 255, 255, .1));
+  }
 }
