--- a/styles/movie.module.scss
+++ b/styles/movie.module.scss
@@ -4,23 +4,19 @@
   gap: 20px;
   cursor: pointer;
   place-items: center;
-}
-
-.movie img {
-  max-width: 100%;
-  min-height: 100%;
-  border-radius: 10px;
-  transition: opacity 0.3s ease-in-out;
-}
-
-.movie img {
-  opacity: 0.7;
-}
-
-.movie img:hover {
-  opacity: 1;
-}
-
-.movie a {
-  text-align: center;
+  figure {
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      opacity: 0.7;
+      transition: opacity 0.3s ease-in-out;
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+  a {
+    text-align: center;
+  }
 }
