--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(auto, 250px));
+  justify-content: space-evenly;
   gap: 25px;
   max-width: 90%;
   width: 100%;
