--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -173,6 +173,7 @@
         place-self: center;
         img {
           width: 100%;
+          max-width: 200px;
           height: 100%;
           border-radius: 5px;
         }
