--- a/styles/detail-page/movie-page.module.scss
+++ b/styles/detail-page/movie-page.module.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: 600px;
     grid-area: top;
-    overflow: hidden;
+    // overflow: hidden;
     z-index: 1;
     
     > article {
