--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -6,4 +6,28 @@
   max-width: 90%;
   width: 100%;
   margin: 50px auto;
+  .movie {
+    display: grid;
+    grid-template-rows: 1fr auto;
+    gap: 20px;
+    cursor: pointer;
+    place-items: center;
+    margin: 0 auto;
+    figure {
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        opacity: 0.7;
+        transition: opacity 0.3s ease-in-out;
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+    a {
+      min-height: 36px;
+      text-align: center;
+    }
+  }
 }
