--- a/styles/loading/loading-home.module.scss
+++ b/styles/loading/loading-home.module.scss
@@ -1,19 +1,30 @@
-.loader {
-  width: 48px;
-  height: 48px;
-  border: 5px solid #fff;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+.skeleton_container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(auto, 250px));
+    justify-content: space-evenly;
+    gap: 25px;
+    max-width: 90%;
+    width: 100%;
+    margin: 50px auto;
+    section {
+      display: grid;
+      grid-template-rows: 1fr auto;
+      gap: 20px;
+      place-items: center;
+      margin: 0 auto;
+      
+      $skelton_color: #71717130;
+      .skeleton_img {
+        width: 250px;
+        height: 375px;
+        border-radius: 10px;
+        background-color: $skelton_color;
+      }
+      .skeleton_title {
+        width: 150px;
+        height: 18px;
+        border-radius: 10px;
+        background-color: $skelton_color;
+      }
+    }
 }
