--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -13,10 +13,13 @@
     cursor: pointer;
     place-items: center;
     margin: 0 auto;
-    figure {
+    // .poster {
+      display: block;
       img {
         width: 100%;
         height: 100%;
+        min-width: 250px;
+        max-width: 400px;
         border-radius: 10px;
         opacity: 0.7;
         transition: opacity 0.3s ease-in-out;
@@ -24,7 +27,7 @@
           opacity: 1;
         }
       }
-    }
+    // }
     a {
       min-height: 36px;
       text-align: center;
