--- a/styles/loading/loading-poster.module.scss
+++ b/styles/loading/loading-poster.module.scss
@@ -1,4 +1,4 @@
-$skelton_color: #71717130;
+$skeleton_color: #71717130;
 
 .skeleton_poster {
   width: 250px;
@@ -9,7 +9,7 @@ $skelton_color: #71717130;
   .skeleton_img {
     width: 100%;
     height: 100%;
-    background-color: $skelton_color;
+    background-color: $skeleton_color;
     min-width: 250px;
     max-width: 400px;
     border-radius: 7%;
