--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -148,7 +148,7 @@
           }
           &:hover {
             img {
-              opacity: .8;
+              opacity: 0.8;
             }
           }
         }
@@ -161,7 +161,7 @@
 .credits__container {
   ul {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 50px;
     li {
       width: 100%;
@@ -169,7 +169,7 @@
       display: flex;
       flex-wrap: wrap;
       figure {
-        width: 30%;
+        width: 35%;
         place-self: center;
         img {
           width: 100%;
@@ -188,7 +188,7 @@
         }
       }
       article {
-        width: 70%;
+        width: 65%;
         padding: 16px 0 0 36px;
         .name {
           font-size: 1.25rem;
@@ -228,7 +228,6 @@
       }
     }
   }
-
 }
 
 // similar
@@ -245,13 +244,13 @@
       a {
         width: 100%;
         img {
-          transition: opacity .2s ease-in-out;
+          transition: opacity 0.2s ease-in-out;
           width: 100%;
           height: 100%;
         }
         &:hover {
           img {
-            opacity: .8;
+            opacity: 0.8;
           }
         }
       }
@@ -264,7 +263,7 @@
         a {
           text-decoration: none;
           .title {
-            transition: opacity .2s ease-in-out;
+            transition: opacity 0.2s ease-in-out;
             font-size: 1.125rem;
             line-height: 2rem;
           }
