--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -1,27 +1,25 @@
-// *
-.synopsys__container,
-.credits__container,
-.videos__container,
-.similar__container {
+@mixin container {
   width: 70%;
   grid-area: bottom;
   margin: 0 auto;
   padding: 0 0 100px;
+  
 }
-.credits__container,
-.videos__container,
-.similar__container {
+@mixin content-page {
+  @include container;
   h2 {
     font-size: 2rem;
     font-weight: bold;
     margin: 0 0 70px;
     padding: 0 0 0 1rem;
-    border-left: 5px solid #666;
+    border-left: 5px solid #666
   }
 }
+
 // ==== {Children} ====
 // Synopsys Page (main)
 .synopsys__container {
+  @include container;
   > article {
     width: 100%;
     height: 100%;
@@ -159,6 +157,7 @@
 
 // credits
 .credits__container {
+  @include content-page;
   ul {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -207,6 +206,7 @@
 
 // video
 .videos__container {
+  @include content-page;
   ul {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -232,6 +232,7 @@
 
 // similar
 .similar__container {
+  @include content-page;
   > ul {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
