--- a/styles/detail-page/movie-info.module.scss
+++ b/styles/detail-page/movie-info.module.scss
@@ -27,6 +27,7 @@
       margin-top: 24px;
       display: flex;
       gap: 1rem;
+      flex-wrap: wrap;
       li {
         font-size: 0.9rem;
         padding: 6px 12px;
