--- a/styles/detail-page/movie-info.module.scss
+++ b/styles/detail-page/movie-info.module.scss
@@ -1,23 +1,39 @@
+@import "../mixin";
+
 .info {
   position: relative;
   top: 0;
   left: 0;
   grid-area: info;
   margin: 0 0 0 36px;
+  @include xs {
+    position: static;
+    text-align: center;
+    margin: 0;
+  }
   .top_group {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 250px;
+    height: 100%;
     white-space: pre-wrap;
     text-overflow: ellipsis;
     a {
       text-decoration: none;
       transition: opacity .1s ease-in-out;
       h1 {
-        font-size: 3.625vw;
+        font-size: 3.75rem;
         font-weight: bold;
+        @include lg {
+          font-size: 3rem;
+        }
+        @include md {
+          font-size: 2rem;
+        }
+        @include xs {
+          font-size: 3rem;
+        }
       }
       &:hover {
         opacity: .8;
@@ -28,12 +44,21 @@
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
+      @include xs {
+        justify-content: center;
+      }
       li {
+        color: #aaa;
         font-size: 0.9rem;
         padding: 6px 12px;
-        border: 1px solid #fff;
+        border: 1px solid #aaa;
         border-radius: 50px;
+        // @include xs {
+        // }
       }
+    }
+    @include xs {
+      position: static; 
     }
   }
   .bottom_group {
@@ -44,5 +69,12 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: 16px;
+    @include xs {
+      position: static;
+      width: 100%;
+      // background-color: #71717130;
+      text-align: start;
+    }
   }
+  
 }
