--- a/styles/detail-page/movie-poster.module.scss
+++ b/styles/detail-page/movie-poster.module.scss
@@ -1,18 +1,27 @@
+@import "../mixin";
+
 .poster {
-  // max-width: 400px;
   width: 100%;
   grid-area: poster;
   border-radius: 20px;
   transition: opacity .1s ease-in-out;
+  z-index: 10;
   &:hover {
     opacity: .9;
+  }
+  @include xs {
+    width: 50%;
+    margin: 50px auto;
   }
   img {
     width: 100%;
     height: 100%;
     min-width: 250px;
-    max-width: 400px;
     border-radius: 7%;
     filter: drop-shadow(2px -1px 4rem rgba(255, 255, 255, .1));
+    @include xs {
+      min-width: none;
+      margin: 0 auto;
+    }
   }
 }
