Improve | detail page - 반응형웹

--- a/styles/_mixin.scss
+++ b/styles/_mixin.scss
@@ -1,6 +1,8 @@
 // 미디어쿼리 반응형 mixin 전역관리
 // 부트스트랩 반응형 레이아웃 기준
 
+// 390/844 1:2.2
+
 // xxs: 346px 미만 작은 모바일
 // xs: 576px 미만 모바일
 // sm: 768px 미만 작은 테블릿, 폴드
@@ -8,7 +10,7 @@
 // lg: 1200px 미만 큰사이즈 테블릿
 // xl: 1200px 이상 (데스크탑)
 @mixin xxs {
-  @media (max-width: 345.98px) {}
+  @media (max-width: 389.98px) { @content; }
 }
 @mixin xs {
   @media (max-width: 575.98px) { @content; }
