--- a/styles/detail-page/movie-content.module.scss
+++ b/styles/detail-page/movie-content.module.scss
@@ -43,7 +43,6 @@
     }
     ul {
       width: 100%;
-      gap: 16px;
       display: flex;
     }
     a {
@@ -54,15 +53,30 @@
 
   // 소개
   .about {
+    @include xs {
+      
+    }
     h2 {
       font-size: 2rem;
       margin: 0 0 32px 0;
+      @include xs {
+        text-align: center;
+        font-size: 2rem;
+        margin: 0 0 56px 0;
+      }
     }
     > p {
       width: 70%;
       line-height: 1.5rem;
       padding: 0 0 0 16px;
       margin: 0 0 100px;
+      @include xs {
+        text-align: center;
+        width: 100%;
+        font-size: 1rem;
+        line-height: 1.25rem;
+        padding: 0;
+      }
     }
     // 제조사, 제조국
     h3 {
@@ -80,17 +94,20 @@
   // 출연진
   .credits {
     ul {
+      margin: 0 0 30px;
       li {
         width: 20%;
+        height: 100%;
         max-width: 185px;
         text-align: center;
-        place-self: center;
         img {
           width: 100%;
           height: 100%;
           border-radius: 3%;
           margin-bottom: 8px;
-          transform: scale(0.875);
+          @include xs {
+            width: 90%;
+          }
         }
         .avatar {
           width: 100%;
@@ -100,7 +117,10 @@
           }
         }
         .text_group {
-          height: 80px;
+          @include xs {
+            width: 90%;
+          }
+          height: 100%;
           .credit_name {
             font-size: 18px;
             font-weight: bold;
@@ -130,6 +150,13 @@
           }
         }
       }
+      @include xs {
+        flex-direction: column;
+        li {
+          width: 100%;
+          margin: 0 auto;
+        }
+      }
     }
   }
   // 관련 영화
@@ -139,8 +166,11 @@
       justify-content: space-between;
       li {
         width: 18%;
+        aspect-ratio: 161 / 241;
         a {
           text-decoration: none;
+          display: block;
+          float: none;
           img {
             width: 100%;
             height: 100%;
@@ -151,6 +181,9 @@
           p {
             font-size: 0.875rem;
             color: #aaa;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
           }
           &:hover {
             img {
@@ -180,9 +213,10 @@
         place-self: center;
         img {
           width: 100%;
-          max-width: 200px;
           height: 100%;
+          max-width: 200px;
           border-radius: 5px;
+          aspect-ratio: 185/277;
         }
         .avatar {
           width: 100%;
@@ -191,6 +225,7 @@
           border-radius: 100%;
           img {
             border-radius: 100%;
+            
           }
         }
       }
