--- a/styles/detail-page/movie-info.module.scss
+++ b/styles/detail-page/movie-info.module.scss
@@ -23,22 +23,26 @@
       text-decoration: none;
       transition: opacity .1s ease-in-out;
       h1 {
-        font-size: 3.75rem;
+        font-size: 3.5rem;
         font-weight: bold;
         @include lg {
           font-size: 3rem;
         }
         @include md {
-          font-size: 2rem;
+          font-size: 2.5rem;
         }
         @include xs {
-          font-size: 3rem;
+          margin: 0 0 36px;
+        }
+        @include xxs {
+          font-size: 2rem;
         }
       }
       &:hover {
         opacity: .8;
       }
     }
+    // badges
     ul {
       margin-top: 24px;
       display: flex;
@@ -46,6 +50,7 @@
       flex-wrap: wrap;
       @include xs {
         justify-content: center;
+        margin: 0 0 36px;
       }
       li {
         color: #aaa;
@@ -53,8 +58,6 @@
         padding: 6px 12px;
         border: 1px solid #aaa;
         border-radius: 50px;
-        // @include xs {
-        // }
       }
     }
     @include xs {
@@ -70,10 +73,21 @@
     justify-content: flex-start;
     gap: 16px;
     @include xs {
+      width: 90%;
       position: static;
-      width: 100%;
-      // background-color: #71717130;
+      flex-direction: row;
+      justify-content: space-evenly;
       text-align: start;
+      margin: 0 auto;
+    }
+    @include xxs {
+      width: 100%;
+      position: static;
+      // width: 100%;
+      flex-direction: row;
+      justify-content: space-evenly;
+      text-align: start;
+      margin: 0 auto;
     }
   }
   
