--- a/styles/detail-page/movie-page.module.scss
+++ b/styles/detail-page/movie-page.module.scss
@@ -12,15 +12,16 @@
     width: 100%;
     height: 600px;
     grid-area: top;
-    // overflow: hidden;
     z-index: 1;
     @include md {
       height: 500px;
       margin: 0 0 50px;
     }
     @include xs {
+      // overflow: hidden;
       position: static;
       height: 100%;
+      margin: 0 0 150px;
     }
     
     > article {
@@ -70,10 +71,10 @@
         opacity: .4;
       }
       @include xs {
-        width: 100%;
+        width: 130%;
         height: 100%;
-        opacity: .3;
-        transform: scale(1.3);
+        opacity: 1;
+        
       }
       &::after {
         content: "";
