--- a/styles/detail-page/movie-poster.module.scss
+++ b/styles/detail-page/movie-poster.module.scss
@@ -17,11 +17,15 @@
     width: 100%;
     height: 100%;
     min-width: 250px;
+    aspect-ratio: 780 / 1170;
     border-radius: 7%;
     filter: drop-shadow(2px -1px 4rem rgba(255, 255, 255, .1));
     @include xs {
-      min-width: none;
+      min-width: 180px;
       margin: 0 auto;
+    }
+    @include xxs {
+      min-width: 150px;
     }
   }
 }
